<resources>
    <string name="app_name">CocktailApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_cocktail_like">Cocktail Like</string>
    <string name="text_choice_1">IBA</string>
    <string name="liste_des_ingredients">Liste des ingredients</string>
    <string name="glass_type"> Verre   </string>
    <string name="username">Ynov</string>
    <string name="dashboard_cocktail">Cocktails</string>
    <string name="cocktails">Cocktail</string>
    <string name="Ingredients">Ingredients</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_ingredients">Ingredients</string>
    <string name="title_header_ingredients">Ingredients</string>
    <string name="title_ingredient_detail">Ingredient detail</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="the_cocktail_db_website">www.thecocktaildb.com</string>
    <string name="show">Access website</string>
    <string name="website">Website</string>
    <string name="text_no_email_client">No email enter</string>
    <string name="title_send_email">"Send email "</string>
    <string name="dashboard_about">About us</string>
    <string name="dahsboard_website">Website</string>
    <string name="alert_dialog_title_website">Cocktail database website</string>
    <string name="title_header_dashboard">Dashboard</string>
    <string name="gpat_dev">"Developper : gpatruno "</string>
    <string name="bun_dev">Developper : bpen</string>
    <string name="speewi_test">Tester : speewi</string>
    <string name="list_cocktail_by_ing">Cocktail List</string>
    <string name="title_cocktail_list">Cocktail with</string>
</resources>