<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="475dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_vertical|center_horizontal"
    android:background="@color/cardview_dark_background"
    android:padding="2dp">

    <TextView
        android:id="@+id/closepop"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_close_pop"
        android:textColor="@color/design_default_color_primary" />

    <LinearLayout
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/gpat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/cardview_light_background"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:text="@string/gpat_dev"/>

        <TextView
            android:id="@+id/bun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/cardview_light_background"
            android:textStyle="bold"
            android:text="@string/bun_dev"/>

        <TextView
            android:id="@+id/tester"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/cardview_light_background"
            android:textStyle="bold"
            android:text="@string/speewi_test"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>